# INTT_Nevis_GUI

./: .gitignore  README.md  history_study.md
GUI/: .#Makefile.am  .cvsignore  Clustering.C  Clustering.h  Erf_fit_fphx_nhits_13chips.c  GetPot  Makefile.am  NIDAQmx.h  Noise_26ChipModule.c  Noise_26ChipModule_June10.c  Noise_26ChipModule_June10.c~  ProgressBar.py  UpgradeLog.XML  UpgradeLog2.XML  UpgradeLog2.htm  UpgradeLog3.XML  UpgradeLog4.XML  Wedge_QA_Fit.C  autogen.sh  comm_panel.py  configure.in  deadchannels.C  dlpth1.py  e363xx.py  emacs-X11.exe.stackdump  env_panel.py  example.py  fphxtb.py  fphxtb_22Sep11.py  fphxtb_29Aug11.py  fphxtb_3Jun11.py  fphxtb_ROCI.py  fphxtb_backup.py  fvtx_gui_ROCI.py  fvtx_gui_test.pl  get_raw_events.C  hellow_world.py  nevis_gui.py  nevis_gui.py.~1.83.~  nevis_gui.run.cmd  (+45 more)
GUI/Backup/: read_DAQ.sln
GUI/CVS/: Entries  Repository  Root
GUI/Debug/: BuildLog.htm  mt.dep  read_DAQ.exe.orig  read_DAQ.lastbuildstate  read_DAQ_manifest.rc
GUI/Debug/Old Copies/: read_DAQ_ROCII.c  read_DAQ_ROCII.cpp
GUI/Release/: read_DAQ.lastbuildstate
